Fixed layout bug with description on date selector

--- a/css/copenhagen.css
+++ b/css/copenhagen.css
@@ -180,3 +180,9 @@ a#ding-feedback-tab {
   font-weight: normal;
 }
 
+/** User library status page **/
+
+#ding-reservation-list-form .container-inline-date .form-description {
+  clear: left;
+}
+
